--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+.menu__button a {color:#fff;}
+
 @charset "UTF-8";
 /*======================= Основной шрифт =======================*/
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@@ -5,7 +7,7 @@
 /*======================= Базовые стили =======================*/
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -32,7 +34,7 @@ a {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -44,9 +46,9 @@ button {
 
 button:hover {
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
   -webkit-filter: brightness(0.95);
-          filter: brightness(0.95);
+  filter: brightness(0.95);
 }
 
 /*======================= Шапка =======================*/
@@ -64,7 +66,45 @@ button:hover {
 
 .navbar__logo img:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.navbar__toggler {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  height: 25px;
+  width: 25px;
+}
+
+.navbar__toggler:hover {
+  transform: none;
+}
+
+.navbar__toggler:focus {
+  box-shadow: none;
+}
+
+.navbar__line {
+  background: #737373;
+  height: 1px;
+  width: 100%;
+  transition: .3s;
+}
+
+.navbar__toggler[aria-expanded='true'] .navbar__line:nth-child(1) {
+  transform: translateY(12px) rotate(-45deg);
+}
+
+.navbar__toggler[aria-expanded='true'] .navbar__line:nth-child(2) {
+  transform: translateX(-100%);
+  opacity: 0;
+}
+
+.navbar__toggler[aria-expanded='true'] .navbar__line:nth-child(3) {
+  transform: translateY(-12px) rotate(45deg);
 }
 
 .navbar__links {
@@ -74,7 +114,7 @@ button:hover {
 .navbar__item {
   color: #009639;
   font-size: 1.1rem;
-  padding: 10px 15px;
+  padding: 10px 19px;
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -88,6 +128,7 @@ button:hover {
   background: #009639;
   color: #ffffff;
   font-weight: bold;
+  padding: 10px 52px;
 }
 
 .navbar__phone {
@@ -184,22 +225,18 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 100%;
 }
 
 .menu__item {
   position: relative;
-  width: 196px;
-}
-
-.menu__item:hover > .menu__dropdown {
-  display: block;
+  width: 207.33px;
 }
 
 .menu__item:not(:last-child) {
-  margin-right: 24px;
+  margin-right: 10px;
 }
 
 .menu__item.active .menu__button::before {
@@ -229,7 +266,7 @@ button:hover {
 
 .menu__button:hover {
   -webkit-transform: none;
-          transform: none;
+  transform: none;
 }
 
 .menu__button#first {
@@ -319,7 +356,7 @@ button:hover {
   padding: 10px 20px;
   text-decoration: none;
   display: block;
-  width: 196px;
+  width: 207.33px;
 }
 
 .menu__dropdown a:hover {
@@ -353,7 +390,7 @@ button:hover {
 
 .footer__name img:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .footer__name p {
@@ -422,7 +459,7 @@ button:hover {
 
 .footer__messanger img:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .footer__divider {
@@ -435,29 +472,96 @@ button:hover {
   font-size: 1.08rem;
 }
 
-@media (max-width: 1399.98px) {
-  .menu__item:not(:last-child) {
-    margin-right: 10px;
+@media (min-width: 1400px) {
+  .navbar__container {
+    max-width: unset;
   }
 }
 
-@media (max-width: 1199.98px) {
+@media (min-width: 1600px) {
+  .navbar__container {
+    max-width: 1600px;
+  }
+  .navbar__search {
+    width: 500px;
+  }
+}
+
+@media (max-width: 1399.98px) {
   .navbar__logo img {
     height: 80px;
     width: 80px;
   }
+
+  .navbar__item.active {
+    padding: 10px 36px;
+  }
+
+  .navbar__phone {
+    font-size: 1.8rem;
+  }
+
+  .menu__item {
+    width: 177.66px;
+  }
+
+  .menu__button {
+    height: 100%;
+  }
+
+  .menu__dropdown {
+    width: 100%;
+  }
+
+  .menu__dropdown a {
+    width: unset;
+  }
+}
+
+@media (min-width: 1199.99px) {
+  .menu__item:hover > .menu__dropdown {
+    display: block;
+  }
+}
+
+@media (max-width: 1199.98px) {
   .navbar__links {
     margin-left: 7px;
   }
   .navbar__phone {
     font-size: 1.2rem;
   }
+  .menu__row {
+    flex-direction: column;
+  }
+  .menu__item {
+    margin-top: 10px;
+    width: 100%;
+  }
+  .menu__dropdown.active {
+    display: block;
+    position: static;
+  }
+  .menu__button {
+    padding: 10px 0;
+  }
+  .menu__button::before {
+    content: unset;
+  }
   .footer__tagline {
     margin-bottom: 20px;
     text-align: right;
   }
+  .footer__links.top {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .footer__links.bottom {
+    display: flex;
+    justify-content: space-between;
+  }
   .footer__links + .footer__links {
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .footer__link {
     text-align: center;
@@ -468,24 +572,28 @@ button:hover {
   .footer__contacts * {
     text-align: center;
   }
-  .footer__messangers {
+  .footer__address {
     margin-top: 20px;
+    order: 1;
+  }
+  .footer__messangers {
     text-align: center;
+    width: 100%;
+  }
+  .footer__additional {
+    order: 2;
+  }
+  .footer__divider {
+    margin-top: 20px;
   }
   .footer__copyright {
     text-align: center;
   }
 }
 
-@media (max-width: 1100px) {
-  .menu__item:not(:last-child) {
-    margin-right: 35px;
-  }
-}
-
-@media (max-width: 1020px) {
-  .menu__item:not(:last-child) {
-    margin-right: 14px;
+@media (max-width: 1120px) {
+  .navbar__phone {
+    display: none;
   }
 }
 
@@ -500,79 +608,74 @@ button:hover {
   .navbar__collapse > * {
     margin-top: 10px;
   }
+  .navbar__logo img {
+    height: 50px;
+    width: 50px;
+  }
   .navbar__links {
     margin-left: 0;
   }
+  .navbar__item.active {
+    display: none;
+  }
   .navbar__phone {
+    display: block;
     padding-left: 15px;
   }
   .navbar__search {
+    height: unset;
     margin-top: 15px;
+  }
+  .navbar__search button img {
+    height: 19.5px;
+    width: 17.5px;
   }
 }
 
 @media (max-width: 950px) {
-  .menu__item:not(:last-child) {
-    margin-right: 64px;
-  }
-  .menu__button::before {
-    height: 50%;
-  }
   .menu__item.active .menu__button::before {
     background-size: contain;
   }
 }
 
-@media (max-width: 876px) {
-  .menu__item:not(:last-child) {
-    margin-right: 34px;
-  }
-}
-
 @media (max-width: 767.98px) {
-  .menu__item:not(:last-child) {
-    margin-right: 10px;
-  }
   .footer__name {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   .footer__tagline {
-    text-align: center;
+    margin-top: 20px;
+    text-align: left;
+  }
+  .footer__links.top {
+    justify-content: space-between;
+  }
+  .footer__links.bottom {
+    display: block;
+  }
+  .footer__link {
+    text-align: left;
+    width: auto;
+  }
+  .footer__address {
+    text-align: left;
   }
 }
 
-@media (max-width: 700px) {
-  .menu__item:not(:last-child) {
-    margin-right: 64px;
+@media (max-width: 420px) {
+  .footer__name p {
+    font-size: 1.04rem;
   }
-  .menu__button::before {
-    height: 30%;
+  .footer__tagline {
+    font-size: 1.7rem;
   }
-}
-
-@media (max-width: 600px) {
-  .menu__item:not(:last-child) {
-    margin-right: 24px;
+  .footer__messanger img {
+    height: 45px;
+    width: 45px;
   }
-}
-
-@media (max-width: 520px) {
-  .menu__item:not(:last-child) {
-    margin-right: 5px;
-  }
-}
-
-@media (max-width: 470px) {
-  .menu__item:not(:last-child) {
-    margin-right: 64px;
-  }
-}
-
-@media (max-width: 360px) {
-  .menu__item:not(:last-child) {
-    margin-right: 10px;
+  .footer__copyright {
+    font-size: 1rem;
   }
 }
 
@@ -582,8 +685,8 @@ button:hover {
 
 .banner__link {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: rgba(235, 102, 49, 0.85);
   border-radius: 50%;
   color: #FFFFFF;
@@ -591,13 +694,14 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 150px;
   width: 150px;
   position: absolute;
-  right: 20px;
-  bottom: 100px;
+  left: 50%;
+  transform: translateX(540px);
+  bottom: 20%;
 }
 
 .banner__link:hover {
@@ -626,13 +730,32 @@ button:hover {
   bottom: 20%;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   text-align: center;
   width: 70%;
 }
 
 .banner + .menu {
   margin-top: -64px;
+}
+
+@media screen and (max-width: 1399.98px) {
+  .banner__link {
+    left: unset;
+    right: 12px;
+    transform: none;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .banner__text {
+    bottom: 10%;
+    padding: 0 12px;
+    width: 100%;
+  }
+  .banner__link {
+    bottom: 25%;
+  }
 }
 
 .slider {
@@ -666,23 +789,47 @@ button:hover {
   width: 65px;
 }
 
+.slider .lSSlideOuter {
+  overflow: visible;
+  position: relative;
+}
+
+.slider .lSSlideWrapper {
+  position: static;
+}
+
 .slider .lSAction img {
-  height: 65px;
-  width: 65px;
+  height: 50px;
+  width: 50px;
 }
 
 .slider .lSPrev {
   background: none;
-  height: 65px;
-  width: 65px;
+  left: 0;
+  margin-top: 0;
   opacity: 1;
+  transform: translate(-50%, -50%);
+  height: 50px;
+  width: 50px;
 }
 
 .slider .lSNext {
   background: none;
-  height: 65px;
-  width: 65px;
+  right: 0;
+  margin-top: 0;
   opacity: 1;
+  transform: translate(50%, -50%);
+  height: 50px;
+  width: 50px;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .slider .lSNext {
+    transform: translate(-10px, -50%);
+  }
+  .slider .lSPrev {
+    transform: translate(10px, -50%);
+  }
 }
 
 .digits {
@@ -700,7 +847,7 @@ button:hover {
 
 .digits__item img:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .digits__item #digit_1 {
@@ -730,40 +877,18 @@ button:hover {
   line-height: 114%;
 }
 
-@media (max-width: 1100px) {
-  .banner__link {
-    bottom: 70px;
-  }
-}
-
-@media (max-width: 991px) {
+@media (max-width: 991.98px) {
   .banner__text {
-    bottom: 15%;
     font-size: 3rem;
   }
-}
-
-@media (max-width: 950px) {
   .banner__link {
-    bottom: 40px;
-    height: 120px;
-    padding-top: 10px;
-    width: 120px;
-  }
-  .banner__link p {
-    font-size: 14px;
+    display: none;
   }
 }
 
 @media (max-width: 767.98px) {
   .digits__item + .digits__item {
     margin-top: 30px;
-  }
-}
-
-@media (max-width: 680px) {
-  .banner__link {
-    display: none;
   }
 }
 
@@ -775,8 +900,8 @@ button:hover {
 
 @media (max-width: 400px) {
   .banner__text {
-    bottom: 20%;
-    font-size: 1.5rem;
+    bottom: 10%;
+    font-size: 1.3rem;
   }
 }
 
@@ -787,6 +912,10 @@ button:hover {
 
 .agent__title {
   font-weight: bold;
+}
+
+.agent__subtitle {
+  font-weight: normal;
 }
 
 .agent__about {
@@ -800,8 +929,8 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .agent__item {
@@ -816,18 +945,18 @@ button:hover {
 
 .agent__item.active {
   -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
 }
 
-.agent__item.active .agent__img {
+.agent__item.active .agent__img-wrapper {
   position: absolute;
   z-index: 1;
 }
 
 .agent__item.active .agent__footer {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: rgba(0, 150, 57, 0.85);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -850,9 +979,15 @@ button:hover {
   display: block;
 }
 
+.agent__img-wrapper {
+  height: 125px;
+  width: 100%;
+}
+
 .agent__img {
   cursor: pointer;
-  height: auto;
+  object-fit: cover;
+  height: 100%;
   width: 100%;
 }
 
@@ -899,7 +1034,7 @@ button:hover {
   top: 50%;
   left: -15px;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   height: 5px;
   width: 5px;
 }
@@ -916,10 +1051,10 @@ button:hover {
 @media (max-width: 1199.98px) {
   .agent__items {
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
   }
   .agent__item {
     margin-right: 10px;
@@ -950,7 +1085,7 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .course__menu-item {
@@ -985,11 +1120,11 @@ button:hover {
 
 .course__video a > img {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   max-width: 100%;
   height: auto;
   -webkit-box-shadow: 0 0 5px #ccc;
-          box-shadow: 0 0 5px #ccc;
+  box-shadow: 0 0 5px #ccc;
 }
 
 .course__video a, .course__video iframe {
@@ -1088,7 +1223,7 @@ button:hover {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding: 50px 30px;
   height: auto;
   width: 300px;
@@ -1152,7 +1287,7 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .vebinar__menu-item {
@@ -1192,11 +1327,11 @@ button:hover {
 
 .vebinar__video a > img {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   max-width: 100%;
   height: auto;
   -webkit-box-shadow: 0 0 5px #ccc;
-          box-shadow: 0 0 5px #ccc;
+  box-shadow: 0 0 5px #ccc;
 }
 
 .vebinar__video a, .vebinar__video iframe {
@@ -1263,4 +1398,340 @@ button:hover {
     width: 270px;
   }
 }
-/*# sourceMappingURL=style.css.map */
+
+.login {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.login__wrapper {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 3px solid #009639;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: auto;
+  padding: 30px;
+  width: 300px;
+}
+
+.login__wrapper img {
+  height: 100px;
+  margin-bottom: 15px;
+  width: 100px;
+}
+
+.login__wrapper h1 {
+  color: #009639;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.login__wrapper input {
+  font-size: 1.2rem;
+  height: 47px;
+  margin-top: 15px;
+  padding: 5px;
+  width: 100%;
+}
+
+.login__wrapper input:hover {
+  border-color: #009639;
+}
+
+.login__wrapper input:focus {
+  outline: #009639;
+}
+
+.login__wrapper button {
+  background: #009639;
+  border: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 1.81rem;
+  margin-top: 15px;
+  padding: 5px;
+  text-align: center;
+  width: 100%;
+}
+
+.default-ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.default-ul li {
+  color: #708687;
+  font-size: 1.55rem;
+  padding-left: 20px;
+  position: relative;
+}
+
+.default-ul li::before {
+  border-radius: 50%;
+  background: #708687;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 17px;
+  height: 6px;
+  width: 6px;
+}
+
+.default-p {
+  color: #708687;
+  font-size: 1.55rem;
+  line-height: 132%;
+}
+
+.course-group {
+  color: #009639;
+  font-size: 29px;
+  margin-top: 50px;
+  line-height: 100%;
+}
+
+.course-group__current {
+  font-weight: bold;
+}
+
+.course-buttons {
+  display: grid;
+  grid-column-gap: 12px;
+  grid-row-gap: 55px;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 50px;
+  position: relative;
+}
+
+.course-buttons__item {
+  border: none;
+  color: #fff;
+  display: block;
+  font-size: 29px;
+  line-height: 100%;
+  padding: 15px;
+  text-align: center;
+}
+
+.course-buttons__item:hover {
+  color: #fff;
+  transform: none;
+}
+
+.course-buttons__item:nth-child(1), .course-buttons__item:nth-child(3) {
+  background: #43b02a;
+}
+
+.course-buttons__item:nth-child(2) {
+  background: #ec6631;
+}
+
+.course-buttons__item:nth-child(4) {
+  background: #009639;
+}
+
+.course-buttons__dropdown {
+  background: rgba(0, 150, 57, 0.85);
+  display: none;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 40px;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+}
+
+.course-buttons__dropdown.active {
+  display: grid;
+}
+
+.course-buttons__dropdown-link {
+  color: #fff;
+  display: block;
+  font-size: 17.33px;
+  padding-left: 10px;
+  position: relative;
+}
+
+.course-buttons__dropdown-link:hover {
+  color: #d6d6d6;
+}
+
+.course-buttons__dropdown-link::before {
+  border-radius: 50%;
+  background: #fff;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 10px;
+  height: 4px;
+  width: 4px;
+}
+
+.course-buttons__dropdown-lecture {
+  color: #fff;
+  font-size: 17.33px;
+  font-weight: bold;
+}
+
+.course-buttons__dropdown-link + .course-buttons__dropdown-lecture {
+  margin-top: 26px;
+}
+
+.lectures {
+  margin-top: 45px;
+}
+
+.lectures__title {
+  color: #009639;
+  font-size: 2.35rem;
+}
+
+.lectures__wrapper {
+  display: grid;
+  grid-column-gap: 12px;
+  grid-row-gap: 55px;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 50px;
+}
+
+.lectures__speaker {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+
+.lectures__speaker-img {
+  height: auto;
+  width: 100%;
+}
+
+.lectures__speaker-name {
+  color: #708687;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 1.333;
+  padding: 0 16px;
+}
+
+.lectures__speaker-position {
+  font-weight: normal;
+}
+
+.lectures__speaker-btn {
+  align-self: flex-end;
+  color: #fff;
+  font-size: 29px;
+  height: fit-content;
+  line-height: 1;
+  text-align: center;
+  padding: 15px;
+}
+
+.lectures__speaker-btn:hover {
+  color: #fff;
+}
+
+.lectures__speaker-btn.btn-materials {
+  background: #ec6631;
+}
+
+.lectures__speaker-btn.btn-test {
+  background: #43b02a;
+}
+
+.lectures__speaker-btn.btn-link {
+  color: #009639;
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 1.5;
+}
+
+.lectures__link {
+  background: #ccead7;
+  display: block;
+}
+
+.lectures__img {
+  height: 120px;
+  width: 100%;
+}
+
+.lectures__img img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.lectures__info {
+  padding: 25px 30px;
+}
+
+.lectures__name {
+  color: #009639;
+  font-size: 29px;
+  font-weight: bold;
+}
+
+.lectures__about {
+  color: #708687;
+  font-size: 16.66px;
+  line-height: 1.25;
+  margin: 25px 0 0;
+}
+
+@media (max-width: 1199.98px) {
+  .course-buttons {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .course-buttons__dropdown {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lectures__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 820px) {
+  .course-buttons {
+    grid-template-columns: 1fr;
+    grid-row-gap: 15px;
+  }
+
+  .course-buttons__dropdown {
+    grid-template-columns: 1fr;
+  }
+
+  .lectures__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 420px) {
+  .course-buttons__item {
+    font-size: 18px;
+  }
+
+  .lectures__speaker-btn {
+    font-size: 18px;
+    grid-column: 1 / -1;
+  }
+}
